--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                   <p>Right now my goal is just to get into a digital art school to gain experience and skills to develop myself but after a school like this I would like to become a digital artist in 2D animation. This could be character animation for cartoons but also for commercials.</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="./assets/images/profil.jpg" class="img-responsive" alt="">
+                  <img src="./assets/images/me.jpg" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
