--- a/works.html
+++ b/works.html
@@ -87,7 +87,7 @@
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
                         <h3>The logo of the Green Team</h3>
-                        <p>For a project of moral and civic education in high school on the subject of creating an electoral poster for a political party that we created.</p>
+                        <p>For a project with the subject of creating an electoral poster for a political party that we created.</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -138,8 +138,8 @@
                       </a>
                       <div class="card-container">
                         <h4>006/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
+                        <h3>The cartoon wallpaper</h3>
+                        <p>A wallpaper for everyone. A style simple and cartoon with most colors.</p>
                         <a href="./work.html" class="btn btn-default">Discover</a>
                       </div>
                     </div>
