--- a/components.html
+++ b/components.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<script src="https://kit.fontawesome.com/46047fbeed.js" crossorigin="anonymous"></script>
 
 <head>
   <meta charset="UTF-8">
@@ -124,19 +125,8 @@
                 <ul class="list-icons">
                   <li>
                     <span class="fa-icon">
-                      <i class="fa fa-facebook"></i>
+                      <i class="fa-brands fa-google-drive"></i>
                     </span>
-                  </li>
-                  <li>
-                    <span class="fa-icon">
-                      <i class="fa fa-twitter"></i>
-                    </span>
-                  </li>
-                  <li>
-                    <span class="fa-icon">
-                      <i class="fa fa-linkedin"></i>
-                    </span>
-                  </li>
                   <li>
                     <span class="fa-icon">
                       <i class="fa fa-instagram"></i>
@@ -183,45 +173,6 @@
           </div>
         </div>
         
-        <div class="template-example">
-          <h2 class="template-title-example">Inputs</h2>
-
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-            </div>
-
-            <div class="form-group">
-              <select class="form-control">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-              </select>
-            </div>
-
-            <div class="form-group">
-              <label class="checkbox-inline">
-                <input 
-                type="checkbox" id="inlineCheckbox1" value="option1"> Email me a copy
-              </label>
-              <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox2" value="option2"> I am a human
-              </label>
-            </div>
-
-            <div class="form-group">
-              <textarea class="form-control" rows="3" placeholder="Enter your message"></textarea>
-            </div>
-            
-            <div class="alert alert-success" role="alert">Your message was successfully sent</div>
-            <div class="alert alert-danger" role="alert">Your message has not been sent, restart</div>
-        </div>
-
-
-
-
       </div>
     </div>
   </div>
