--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <script src="https://kit.fontawesome.com/46047fbeed.js" crossorigin="anonymous"></script>
 
 <head>
   <meta charset="UTF-8">
@@ -65,7 +66,7 @@
                     <div class="col-md-7">
                       <h3>Find all my creations on my google drive</h3>
                       <a href="https://drive.google.com/drive/folders/11u-H3ZFVO5WWEHBm1L9ji2AUG3CSL__b?usp=sharing" title="" class="fa-icon">
-                        <i class="fa fa-instagram"></i>
+                        <i class="fa-brands fa-google-drive"></i>
                       </a>
                     </div>
                     <div class="col-md-5 address-container">
