--- a/about.html
+++ b/about.html
@@ -124,13 +124,13 @@
                                     <div class="services__item__icon">
                                         <img  width="50" height="50" src="img/icons/animation.png" alt="">
                                     </div>
-                                    <h4>Animation 2D</h4>
-                                    <p>Whether you’re halfway through the editing process, or you.</p>
+                                    <h4>Animation 2D / 3D</h4>
+                                    <p>my goal is to join the 2D or 3D domain all in develop my technique and keep my draw style</p>
                                 </div>
                             </div>
                         </div>
                         <div class="about__text__desc">
-                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of the high school Sain Adrien La Salle.<br>First, at 12, I started computer coding by coding python, javascript. Then during my thirteenth year, I started graphic design by making logos, banners... Finally, at the age of 14, I took a passion for drawing and I learned to draw all by myself. So I arrived here today.<br>Right now my goal is just to get into a digital art school to gain experience and skills to develop myself but after a school like this I would like to become a digital artist in 2D animation. This could be character animation for cartoons but also for commercials.</p>
+                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of the high school Saint Adrien La Salle.<br>First, at 12 years old, I started computer coding by coding python, javascript. Then during my thirteenth year, I started graphic design by making logos, banners... Finally, at the age of 14, I found a passion for drawing and I learned to draw all by myself. So I arrived here today.<br>Right now my goal is just to get into a digital art school to gain experience and skills to develop myself but after a school like this I would like to become a digital artist in 2D or 3D animation. This could be character animation for cartoons but also for commercials.</p>
                         </div>
                     </div>
                 </div>
