--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="footer__option__item">
                             <h5>About us</h5>
-                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of the high school Sain Adrien La Salle.</p>
+                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of Saint Adrien La Salle.</p>
                             <a href="./about.html" class="read__more">Read more <span class="arrow_right"></span></a>
                         </div>
                     </div>
