--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <div class="work__item small__item set-bg" data-setbg="img/work/CartoonCharacter.png">
-                <a href="#"></a>
+                <a href="./html_portfolio/CartoonCharacter.html"><img src="img/work/CartoonCharacterProfil.png"></a>
                 <div class="work__item__hover">
                     <h4>Cartoon Character</h4>
                     <ul>
@@ -190,7 +190,7 @@
                 </div>
             </div>
             <div class="work__item small__item set-bg" data-setbg="img/work/CartoonCharacterProfil.png">
-                <a href="#"></a>
+                <a href="./html_portfolio/CartoonCharacter.html"><img src="img/work/CartoonCharacterProfil.png"></a>
                 <div class="work__item__hover">
                     <h4>Cartoon character in profile</h4>
                     <ul>
@@ -200,7 +200,7 @@
                 </div>
             </div>
             <div class="work__item large__item set-bg" data-setbg="img/work/drake.png">
-                <a href="#"></a>
+                <a href="./html_portfolio/Inktober.html"><img src="img/work/drake.png"></a>
                 <div class="work__item__hover">
                     <h4>Inktober</h4>
                     <ul>
@@ -220,7 +220,7 @@
                 </div>
             </div>
             <div class="work__item small__item set-bg" data-setbg="img/work/GreenTeam.png">
-                <a href="#"></a>
+                <a href="./html_portfolio/LogoGreenTeam.html"><img src="img/work/GreenTeam.png"></a>
                 <div class="work__item__hover">
                     <h4>Green Team</h4>
                     <ul>
