feat/div filter

--- a/index.html
+++ b/index.html
@@ -305,13 +305,13 @@
                 </p>
             </div>
         </div> <!-- end heading-block -->
-
-        <button class="filter-button" class="btn btn--primary full-width" class="btn btn--primary full-width" data-filter="Character">Character</button>
-        <button class="filter-button"  class="btn btn--primary full-width" data-filter="illustration">Illustration</button>
-        <button class="filter-button" class="btn btn--primary full-width" data-filter="webdesign">Web Design</button>
-        <button class="filter-button"  class="btn btn--primary full-width" data-filter="2danimmation">2D Animation</button>
-        <button class="filter-button" class="btn btn--primary full-width" data-filter="traditional">Traditional</button>
-
+        <div id="filter">
+            <button class="filter-button" class="btn btn--primary full-width" class="btn btn--primary full-width" data-filter="character">Character</button>
+            <button class="filter-button"  class="btn btn--primary full-width" data-filter="illustration">Illustration</button>
+            <button class="filter-button" class="btn btn--primary full-width" data-filter="webdesign">Web Design</button>
+            <button class="filter-button"  class="btn btn--primary full-width" data-filter="2danimmation">2D Animation</button>
+            <button class="filter-button" class="btn btn--primary full-width" data-filter="traditional">Traditional</button>
+        </div>
         <div class="masonry-wrap">
 
             <div class="masonry">
@@ -319,7 +319,7 @@
     
 
                 <div class="portfolio">
-                    <div class="item peinture">
+                    <div class="item character">
                         <div class="masonry__brick" data-aos="fade-up">
                             <div class="item-folio">
                                 <div class="item-folio__thumb">
