--- a/index.html
+++ b/index.html
@@ -1425,9 +1425,21 @@
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
+                                    <p class="timeline__timeframe">February 13 to February 17, 2023</p>
+                                    <h3 class="item-title">Bootcamps Pôle 3D</h3>
+                                    <h5>Roubaix, Plaîne Images</h5>
+                                </div>
+                                <div class="timeline__desc">
+                                    <p>Training to upgrade my Portfolio and create an animatic</p>
+                                </div>
+                            </div>
+    
+                            <div class="timeline__block">
+                                <div class="timeline__bullet"></div>
+                                <div class="timeline__header">
                                     <p class="timeline__timeframe">January 11, 2023</p>
                                     <h3 class="item-title">GAPH</h3>
-                                    <h5>Formation</h5>
+                                    <h5>Villeneuve d'Ascq</h5>
                                 </div>
                                 <div class="timeline__desc">
                                     <p>Training with a police officer in an anti-harassment action and prevention group</p>
@@ -1438,7 +1450,7 @@
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
                                     <p class="timeline__timeframe">December 19 to December 24, 2022</p>
-                                    <h3 class="item-title">Formation 1 BAFA</h3>
+                                    <h3 class="item-title">Training 1 BAFA</h3>
                                     <h5>Bouvines</h5>
                                 </div>
                                 <div class="timeline__desc">
