feat/Setting Plexiglart

--- a/index.html
+++ b/index.html
@@ -600,9 +600,9 @@
                     <div class="masonry__brick" data-aos="fade-up">
                         <div class="item-folio">
                             <div class="item-folio__thumb">
-                                <a href="images/Portfolio 2x/Logo Plexigl'Art.PNG" class="thumb-link" title="Logo Plexigl'Art" data-size="1050x700">
-                                    <img src="images/Portfolio/Logo Plexigl’art.PNG" 
-                                        srcset="images/Portfolio/Logo Plexigl'Art.PNG 1x, images/Portfolio/Logo Plexigl'Art@2x.PNG 2x" alt="">
+                                <a href="images/Portfolio 2x/Logo Plexiglart.jpg" class="thumb-link" title="Logo Plexigl'Art" data-size="1050x700">
+                                    <img src="images/Portfolio/Logo Plexiglart.jpg" 
+                                        srcset="images/Portfolio/Logo Plexiglart.jpg 1x, images/Portfolio/Logo Plexiglart@2x.jpg 2x" alt="">
                                 </a>
                             </div>
         
