--- a/index.html
+++ b/index.html
@@ -34,24 +34,9 @@
     <!-- font awesome
     ================================================== -->
     <script src="https://kit.fontawesome.com/46047fbeed.js" crossorigin="anonymous"></script>
-
-    
-    <!-- Google Font -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
 </head>
 
 <body id="top">
-    
-    <div id="progress">
-        <span id="progress-value"><i class="fa-solid fa-arrow-up"></i></span>
-    </div>
-
-    <div id="preloader">
-        <div id="loader"></div>
-    </div>
 
     <!-- site header
     ================================================== -->
@@ -114,6 +99,8 @@
     <!-- services
     ================================================== -->
     <section id="services" class="s-services target-section">
+
+        <div class="shadow-overlay"></div>
 
         <div class="row heading-block heading-block--center" data-aos="fade-up">
             <div class="column large-full">
