--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 <li><a href="https://www.facebook.com/profile.php?id=100089869436978" target="_blank"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                 <li><a href="https://twitter.com/malo_artwork" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.instagram.com/malo_artwork/" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                <li><a href="https://github.com/MaloMuy/Portfolio" target="_blank"><i class="fa-brands fa-github" aria-hidden="true"></i></i></a></li>
             </ul>
         </nav>
 
@@ -1594,6 +1595,7 @@
                     <li><a href="https://www.facebook.com/profile.php?id=100089869436978" target="_blank" title="Facebook">Facebook</a></li>
                     <li><a href="https://twitter.com/malo_artwork" target="_blank" title="Twitter">Twitter</a></li>
                     <li><a href="https://instagram.com/malo_artwork/" target="_blank" title="Instagram">Instagram</a></li>
+                    <li><a href="https://github.com/MaloMuy/Portfolio" target="_blank" title="GitHub">GitHub</a></li>
                 </ul>
             </div>
 
